--- a/index.html
+++ b/index.html
@@ -10,17 +10,23 @@
   </head>
   <body>
     <header>
-      <div class="container"><a class="site-logo" href="/">AntoXa PRO</a></div>
+      <div class="container">
+        <div class="site-logo"><a href="/">AntoXa PRO</a></div>
+      </div>
     </header>
     <main class="content">
       <div class="container">
-        <h1 class="title">Создание web сайтов</h1>
+        <h1 class="title">Создание сайтов и web приложений</h1>
         <p>Создание сайтов и разработка web приложений любой сложности под ключ.</p>
       </div>
     </main>
     <footer>
       <div class="container">
-        <p>&copy; 2017 AntoXa PRO | Создание сайтов.</p>
+        <p class="copyright">&copy; 2017 AntoXa PRO | <strong>ASP.NET, NodeJs, HTML, CSS</strong></p>
+        <ul class="contacts">
+          <li>тел: +7 996 919 35 34</li>
+          <li>email: info@antoxa.pro</li>
+        </ul>
       </div>
     </footer>
   <script type="text/javascript" src="builds/scripts.js"></script></body>
