--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>AntoXa PRO - создание сайтов и web приложений</title>
     <meta name="description" content="Создание качественных сайтов и разработка web приложений любой сложности под ключ. Заказать создание сайта.">
     <meta name="keywords" content="antoxa, pro, заказать, создание, сайтов, сайт, web, приложения, заказать сайт, создание сайтов, web приложение, под ключ">
-  </head>
+  <link href="builds/styles.css" rel="stylesheet"></head>
   <body>
     <header>
       <div class="container">
