--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </main>
     <footer>
       <div class="container">
-        <p class="copyright">&copy; 2017 AntoXa PRO | <strong>ASP.NET, NodeJs, HTML, CSS</strong></p>
+        <p class="copyright">&copy; 2020 AntoXa PRO | <strong>NodeJs, Mongoose, Express, Vue</strong></p>
         <ul class="contacts">
           <li>тел: +7 996 919 35 34</li>
           <li>email: info@antoxa.pro</li>
